fixed full page component issue, alignment on landing page with centered text

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+.page-content {
+  height: 100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
 /* LANDING PAGE */
 
 @keyframes Transistion { 
@@ -15,30 +26,16 @@
 .header-color :hover {
   color: #178788;
 }
-/* @media only screen and (max-width: 1440px) {
-  .landing-page {
-    padding-bottom: 7%;
-    padding-top: 7%;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .landing-page {
-    padding-bottom: 38%;
-    padding-top: 38%;
-  }
-}
-@media only screen and (max-width: 1023px) {
-  .landing-page {
-    padding-bottom: 2em;
-    padding-top: 2em;
-  }
-} */
+
 .landing-page {
   background-image: url('./components/img/clouds.JPG');
   background-size: cover;
-  height: 80vh;
-  margin: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  position: absolute;
+  
 }
 
 .landing-grid {
@@ -46,15 +43,11 @@
   display: flex;
   vertical-align: middle;
   justify-content: center;
+  height:100%;
   /*background: linear-gradient(270deg, #22c1c3, #fdbb2d);
   background-size: 600% 600%;
 
   animation: Transistion 6s ease infinite;*/
-}
-
-.page-content {
-  height: 100%;
-  width: 100%;
 }
 
 .proj-img {
